ported updates & fixes from java mode